Reetan.Nayak Dev 25/force-app/main/default/objects/Contact/fields/AObj_A__c.field-meta.xml
<CustomField>
    <fullName>AObj_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AObj A</label>
    <referenceTo>AObj_A__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>