Reetan.Nayak Dev 25/force-app/main/default/objects/Contact/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>FirstName + &apos; &apos; + LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>