Reetan.Nayak Dev 25/force-app/main/default/objects/Contact/fields/User_A__c.field-meta.xml
<CustomField>
    <fullName>User_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User A</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>